assets/100years.css
body {
  overflow: hidden;
}


body {
  font-family: Roboto, sans-serif;
  display: grid;
  grid-template-rows: 70px 1fr 100px;
  grid-template-columns: 30% 70%;
  min-height: 100vh;
  margin: 0;
  padding: 0;
  background: #446ef8;
}


header {
  width: 100%;
  display: flex;
  justify-content: space-between;
  background: white;
  align-items: center;
  text-align: center;
  padding: 0 20px;
  grid-column: span 2;
}

header h1 {
  left: 50%;
  color: #040568;
}

.totalBalance {
  font-size: 18px;
  color: #040568;
}

#button-container {
  display: flex;
  flex-direction: row;
}

/* Style the buttons */
#portfolio {
  display: block;
  width: auto;
  padding: 10px 20px;
  background-color: #040568;
  color: #fff;
  border: none;
  border-radius: 20px;
  font-size: 18px;
  cursor: pointer;
  transition: background-color 0.3s ease;
  margin-left: 50px;
  margin-right: 30px;
}

#home {
  display: block;
  width: auto;
  padding: 10px 20px;
  background-color: #040568;
  color: #fff;
  border: none;
  border-radius: 20px;
  font-size: 18px;
  cursor: pointer;
  transition: background-color 0.3s ease;
  margin-left: 50px;
}

/* Hover effect for buttons */
#home:hover,
#portfolio:hover {
  background-color: #0e12db;
}

button {
  cursor: pointer;
}


#dateTime {
  font-size: 18px;
  color: #040568;
  margin-left: 10px;
  font-weight: 300;
  min-width: 110px;
}



/* Container for both the background div and the graph */
.right-container {
  display: flex;
  grid-column: 2;
  grid-row: 2;
  background-color: #040568;
  color: white;
  border-radius: 10px;
  margin: 20px;
  margin-left: 10px;
  gap: 20px;
  padding: 20px;
  overflow-y: hidden;
}

.left-container {
  display: grid;
  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
  grid-column: 1;
  grid-row: 2;
  background-color: #040568;
  color: white;
  border-radius: 10px;
  margin: 20px;
  margin-right: 10px;
  padding: 20px;
  overflow-y: hidden;
}

#arrows {
  max-width: 100%;
  max-height: 100%;
  grid-row: span 5;
}

.row {
  display: grid;
  grid-template-rows: 30% 80%;
  /* Two rows, 30% and 80% of the height */
  align-items: center;
  margin-bottom: 15px;
}

.title {
  font-weight: bold;
  grid-row: 1;
  /* Title takes the first row */
}

.bar {
  /* Styling for the bar, e.g., input element */
  grid-row: 2;
  /* Bar takes the second row */
}

.container {
  display: flex;
}

/* Styles for the background div */
.graphBox {
  width: calc((3/5 * 100vw));
  height: 60vh;
  right: 30px;
  margin-top: 30px;
  padding: 20px;
  position: absolute;
  background: #f0f0f0;
  border-radius: 10px;
}

/* Styles for the graph */
.graph {
  width: calc((1/2 * 100vw));
  height: 350px;
  margin-top: 40px;
  padding: 0;
  position: absolute;
  border-left: 1px solid black;
  border-bottom: 1px solid black;
  right: 100px;
}

#x1,
#y1 {
  position: absolute;
  font-size: larger;
}

#x1 {
  bottom: -40px;
  left: 330px;
}

#y1 {
  left: -60px;
  bottom: 175px;
}

.dropdown-and-search {
  grid-column: span 2;
  grid-template-columns: 30% 70%;
  display: grid;
  width: 100%;
}

.stock-title {
  color: #040568;
  font-size: 24px;
  margin: 10%;
  left: 50%;
  display: grid;
  grid-column: 1;
  width: 100%;
}

.dropdown {
  display: grid;
  grid-column: 2;
  width: 100%;
}

#quantity-title {
  grid-column: 1;
}

#quantity {
  grid-column: 2;
  width: 100%;
  height: 60%;
}

/* Dropdown Button */
.dropbtn {

  width: 100%;
  background-color: transparent;
  color: white;
  padding: 16px;
  font-size: 16px;
  border: none;
  cursor: pointer;
  z-index: 3;
}
/* The search field */
#myInput {

  width: 100%;
  height: 60%;
  font-size: 16px;
  z-index: 2;
}

/* The search field when it gets focus/clicked on */
#myInput:focus {
  outline: 3px solid #ddd;
}

/* The container <div> - needed to position the dropdown content */
.dropdown {
  position: relative;
  display: inline-block;
}

/* Dropdown Content (Hidden by Default) */
.dropdown-content {
  display: none;
  position: absolute;
  background-color: #f6f6f6;
  min-width: 230px;
  border: 1px solid #ddd;
  z-index: 1;
  max-height: 300px;
  overflow-y: auto;
}


/* Links inside the dropdown */
.dropdown-content button {
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
  border: none;
  background: none;
  cursor: pointer;
}

/* Change color of dropdown links on hover */
.dropdown-content a:hover {
  background-color: #f1f1f1
}

#currentPrice {
  color: #ffffff;
  font-size: 16px;
}

/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
.show {
  display: block;
}

.ff-dropdown-container {
  position: relative;
  display: inline-block;
  background-color: #040568;
  border-radius: 30px;
  padding: 10px 20px;
}

#ffDropbtn {
  z-index: 100;
}

.ff-dropdown-content {
  display: none;
  position: absolute;
  background-color: transparent;
  min-width: 160px;
  z-index: 1;
  top: 0;
  left: 0;
  margin-left: 10px;
}

.ff-dropdown-content {
  padding: 6px 20px;
}

.ffbutton{
  border: none;
  background: none;
  font-family: 'Evil', sans-serif;
  color: white;
  /* margin: 0px 3px; */
}

.ffbutton:hover {
  cursor: pointer;
}

.ff-dropdown-container:hover .ff-dropdown-content {
  display: flex;
}



#buySellContainer {
  display: flex;
  align-items: center;
  margin: 10px;
}

#buySell {
  margin-left: 10px;
  color: #040568;
}

#commitButton button:active {
  background: #040568;
  color: #040568;
}

#commitButton {
  display: block;
  width: auto;
  padding: 10px 20px;
  background-color: #446ef8;
  color: #fff;
  border: none;
  border-radius: 20px;
  font-size: 18px;
  cursor: pointer;
  transition: background-color 0.3s ease;
  /* margin-left: 50px; */
}

#actionDropdown {
  width: 100%;
  height: 60%;
  font-size: 16px;
}

.bar {
  /* width: 100%;
  height: 60%; */
  font-size: 16px;
  /* background: white; */

}

#playPauseButton,
#ffDropbtn {
  background: none;
  border-radius: 0;
  border: none;
  font-size: 20px;
  margin: 5px;
  padding-right: 15px;
  color: #040568;
}

